--- a/3. Column Preview Card Component/style.css
+++ b/3. Column Preview Card Component/style.css
@@ -40,6 +40,7 @@ main{
     flex-direction: column;
     justify-content: space-evenly;
     padding-bottom: 1.5rem;
+     flex-shrink: 0;
 }
 
 a:focus{
